Move the audit configs from contrib to usr.sbin/auditd.
This pulls out configs out of the distribution and avoids touching .PATH

--- a/usr.sbin/auditd/Makefile
+++ b/usr.sbin/auditd/Makefile
@@ -3,7 +3,7 @@
 #
 
 OPENBSMDIR=${SRCTOP}/contrib/openbsm
-.PATH: ${OPENBSMDIR}/bin/auditd ${OPENBSMDIR}/etc
+.PATH: ${OPENBSMDIR}/bin/auditd
 
 CFLAGS+=	-I${OPENBSMDIR}
 
