--- a/cddl/usr.sbin/dtrace/tests/Makefile
+++ b/cddl/usr.sbin/dtrace/tests/Makefile
@@ -8,7 +8,7 @@ TESTS_SUBDIRS+=	common
 KYUAFILE=	yes
 
 .PATH:		${.CURDIR}/tools
-SCRIPTSDIR=	${TESTSDIR}
+SCRIPTSDIR=	TESTSDIR
 SCRIPTS=	dtest.sh
 
 .include <bsd.test.mk>
