--- a/libexec/makewhatis.local/Makefile
+++ b/libexec/makewhatis.local/Makefile
@@ -2,6 +2,6 @@
 
 SCRIPTS=	makewhatis.local.sh
 MAN=		makewhatis.local.8
-SCRIPTSDIR=	${LIBEXECDIR}
+SCRIPTSDIR=	LIBEXECDIR
 
 .include <bsd.prog.mk>
