--- a/gnu/lib/csu/Makefile
+++ b/gnu/lib/csu/Makefile
@@ -43,7 +43,7 @@ FILES=		${OBJS} ${SOBJS} ${TGTOBJS}
 FILESMODE=	${LIBMODE}
 FILESOWN=	${LIBOWN}
 FILESGRP=	${LIBGRP}
-FILESDIR=	${LIBDIR}
+FILESDIR=	LIBDIR
 # These FILES qualify as libraries for the purpose of LIBRARIES_ONLY.
 .undef LIBRARIES_ONLY
 
