--- a/tests/sys/cddl/zfs/tests/txg_integrity/Makefile
+++ b/tests/sys/cddl/zfs/tests/txg_integrity/Makefile
@@ -4,8 +4,8 @@
 
 PACKAGE=tests
 TESTSDIR=${TESTSBASE}/sys/cddl/zfs/tests/txg_integrity
-FILESDIR=${TESTSDIR}
-BINDIR=${TESTSDIR}
+FILESDIR=	TESTSDIR
+BINDIR=	TESTSDIR
 
 ATF_TESTS_KSH93+=	txg_integrity_test
 TEST_METADATA+=		required_user="root"
