--- a/tests/sys/mqueue/Makefile
+++ b/tests/sys/mqueue/Makefile
@@ -4,7 +4,7 @@ TESTSDIR=	${TESTSBASE}/sys/mqueue
 
 ATF_TESTS_SH=	mqueue_test
 
-BINDIR=		${TESTSDIR}
+BINDIR=		TESTSDIR
 
 CFLAGS+=	-I${SRCTOP}/tests
 
