--- a/usr.sbin/makefs/tests/Makefile
+++ b/usr.sbin/makefs/tests/Makefile
@@ -3,7 +3,7 @@
 ATF_TESTS_SH+=	makefs_cd9660_tests
 ATF_TESTS_SH+=	makefs_ffs_tests
 
-BINDIR=		${TESTSDIR}
+BINDIR=		TESTSDIR
 
 # XXX: PACKAGE support for SCRIPTS
 SCRIPTS+=	makefs_tests_common.sh
