--- a/sbin/pfctl/tests/files/Makefile
+++ b/sbin/pfctl/tests/files/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 TESTSDIR=	${TESTSBASE}/sbin/pfctl/files
-BINDIR=		${TESTSDIR}
+BINDIR=		TESTSDIR
 
 # We use ${.CURDIR} as workaround so that the glob patterns work.
 FILES=		${.CURDIR}/pf????.in
