Define BINDIR for the tests

--- a/libexec/atf/atf-sh/tests/Makefile
+++ b/libexec/atf/atf-sh/tests/Makefile
@@ -4,6 +4,7 @@
 
 ATF=		${SRCTOP}/contrib/atf
 .PATH:		${ATF}/atf-sh
+BINDIR=		TESTSDIR
 
 ATF_TESTS_SH+=	atf_check_test
 ATF_TESTS_SH+=	config_test
