Clean up a little a few installs happening to the wrong place by too many variable layers

--- a/sbin/pfctl/tests/files/Makefile
+++ b/sbin/pfctl/tests/files/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 TESTSDIR=	${TESTSBASE}/sbin/pfctl/files
-BINDIR=		TESTSDIR
+FILESDIR=	TESTSDIR
 
 # We use ${.CURDIR} as workaround so that the glob patterns work.
 FILES=		${.CURDIR}/pf????.in
