--- a/usr.bin/xo/tests/Makefile
+++ b/usr.bin/xo/tests/Makefile
@@ -32,6 +32,7 @@ ${PACKAGE}FILES+=		xo_01.XP.err
 ${PACKAGE}FILES+=		xo_01.XP.out
 
 SCRIPTS+=	xo_01
+SCRIPTSDIR=	TESTSDIR
 CLEANFILES+=	xo_01
 
 LIBADD+=	xo
