--- a/lib/libc/tests/hash/Makefile
+++ b/lib/libc/tests/hash/Makefile
@@ -14,6 +14,8 @@ NETBSD_ATF_TESTS_C+=	sha2_test
 
 NETBSD_ATF_TESTS_SH=	hash_test
 
+BINDIR=		TESTSDIR
+
 PROGS+=		h_hash
 
 FILESGROUPS+=	${PACKAGE}DATA_FILES
