Switch from setting BINDIR to setting SCRIPTSDIR properly.
Largely redoes 74d0c7eddccd3ada389319ec908097b4af718ba3

--- a/lib/libc/tests/nss/Makefile
+++ b/lib/libc/tests/nss/Makefile
@@ -6,7 +6,7 @@ PACKAGE=	tests
 
 TESTSDIR=	${TESTSBASE}/lib/libc/nss
 
-BINDIR=		TESTSDIR
+SCRIPTSDIR=		TESTSDIR
 
 ATF_TESTS_C+=	getaddrinfo_test
 ATF_TESTS_C+=	getgr_test
