This one actually needs BINDIR

--- a/lib/libarchive/tests/Makefile
+++ b/lib/libarchive/tests/Makefile
@@ -8,7 +8,7 @@ ATF_TESTS_SH+=	functional_test
 
 TEST_METADATA.functional_test+=	timeout="600"
 
-SCRIPTSDIR=	TESTSDIR
+BINDIR=		TESTSDIR
 
 PROGS+=	libarchive_test
 
