--- a/libexec/save-entropy/Makefile
+++ b/libexec/save-entropy/Makefile
@@ -2,4 +2,10 @@
 
 SCRIPTS=	save-entropy.sh
 
+DIRS+=	VAR_DB_ENTROPY
+VAR_DB_ENTROPY=	/var/db/entropy
+VAR_DB_ENTROPY_OWN=	operator
+VAR_DB_ENTROPY_GRP=	operator
+VAR_DB_ENTROPY_MODE=	700
+
 .include <bsd.prog.mk>
