Fix installing pfctl tests

--- a/sbin/pfctl/tests/files/Makefile
+++ b/sbin/pfctl/tests/files/Makefile
@@ -4,9 +4,7 @@ TESTSDIR=	${TESTSBASE}/sbin/pfctl/files
 FILESDIR=	TESTSDIR
 
 # We use ${.CURDIR} as workaround so that the glob patterns work.
-FILES=		${.CURDIR}/pf????.in
-FILES+=		${.CURDIR}/pf????.include
-FILES+=		${.CURDIR}/pf????.ok
+FILES!=	ls ${.CURDIR}/pf????.*
 FILES+=		${.CURDIR}/pfctl_test_descr.sh
 
 .include <bsd.progs.mk>
