--- a/sbin/pfctl/tests/files/Makefile
+++ b/sbin/pfctl/tests/files/Makefile
@@ -4,7 +4,7 @@ TESTSDIR=	${TESTSBASE}/sbin/pfctl/files
 FILESDIR=	TESTSDIR
 
 # We use ${.CURDIR} as workaround so that the glob patterns work.
-FILES!=		echo ${.CURDIR}/pf????.*
+FILES!=		echo ${.CURDIR}/pf????.in ${.CURDIR}/pf????.include ${.CURDIR}/pf????.ok
 FILES+=		${.CURDIR}/pfctl_test_descr.sh
 
 .include <bsd.progs.mk>
