Switch rc.d/newsyslog to be a CONFS too

--- a/usr.sbin/newsyslog/Makefile
+++ b/usr.sbin/newsyslog/Makefile
@@ -3,12 +3,13 @@
 .include <src.opts.mk>
 
 PROG=	newsyslog
+CONFGROUPS=	CONFS RCD
 CONFS=	newsyslog.conf
+RCD=	rc.d/newsyslog
+RCDDIR=	/etc/rc.d
+RCDMODE=     ${BINMODE}
 MAN=	newsyslog.8 newsyslog.conf.5
 SRCS=	newsyslog.c ptimes.c
-FILES=	rc.d/newsyslog
-FILESDIR=	/etc/rc.d
-FILESMODE=	${BINMODE}
 
 HAS_TESTS=
 SUBDIR.${MK_TESTS}+= tests
