Switch rc.d/sysctl to be a CONFS as well

--- a/sbin/sysctl/rc.d/Makefile
+++ b/sbin/sysctl/rc.d/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
-FILES=		sysctl
-FILESDIR=	/etc/rc.d
-FILESMODE=	${BINMODE}
+CONFS=		sysctl
+CONFSDIR=	/etc/rc.d
+CONFSMODE=	${BINMODE}
 
 .include <bsd.prog.mk>
