--- a/sbin/sysctl/Makefile
+++ b/sbin/sysctl/Makefile
@@ -2,11 +2,13 @@
 # $FreeBSD$
 
 PACKAGE=runtime
+CONFGROUPS=	CONFS RCD
 CONFS=	sysctl.conf
+RCD=		sysctl
+RCDDIR=	/etc/rc.d
+RCDMODE=	${BINMODE}
 PROG=	sysctl
 WARNS?=	3
 MAN=	sysctl.8
-
-SUBDIR+=	rc.d
 
 .include <bsd.prog.mk>
